# retro-sync

./: .gitignore  LICENSE  config.toml  main.py  pyproject.toml
test/: test_main.py
