[project]
name = "retro-sync-saves"
version = "0.1.0"
description = "A tool to sync save files between local and remote locations."
authors = [
    { name = "Richard Cross", email = "richard.cross@icloud.com" }
]

dependencies = [
    "pytest==8.3.4",
    "toml==0.10.2",
    "Kivy==2.3.1"
]

[tool.setuptools]
py-modules = []
